--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,56 @@
 /*  your css code here. If applicable */
+.middle{
+    margin: auto;
+    width: 80%;
+}
+#table-1-head{
+	margin-left:220px;
+	margin-bottom:0px;
+	font-weight:bold;
+}
+.first{
+	margin-bottom:20px;
+}
+
+.center{
+    text-align: center;
+}
+
+.right{
+    text-align: right;
+}
+
+table{
+    border: 1px solid black;
+    border-spacing: 1px;
+}
+#table-2{
+	margin-bottom:20px;
+	height: 100px;
+}
+#table-3{
+	
+}
+
+td{
+    padding: 1px;
+    border: 1px solid black;
+}
+#t21{
+	Colspan:"6";
+}
+
+.green{
+    background-color: green;
+	height:15px;
+}
+#t-image{
+	width:200px;
+	height:200px;
+	margin-left:160px;
+}
+
+.blue{
+    background-color: blue;
+	height:15px;
+}
